# TrueReality

./: .codedocs  .gitignore  .hgignore  .hgtags  CMakeLists.txt  CONTRIBUTING.md  README.md  TrueReality.sln  VR-Sim Road Map.xlsx  VRSimLab.sln  package.json
ALL_BUILD/: ALL_BUILD.vcproj  DeleteVerFiles.vbs  RebuildVersion.bat
AutoBuildNumber/: ReadMe.txt  TheCore2dll.rc  VersionInf.h  VersionNo.bat  VersionNo.h
CMakeModules/: FindBoostLibs.cmake  FindDelta3D.cmake  FindFFMPEG.cmake  FindFFmpeg.cmake  FindFFmpegX.cmake  FindGoogleTest.cmake  FindJsonCpp.cmake  FindOSG.cmake  FindOpenThreads.cmake  FindOpenVR.cmake  FindTR.cmake  FindXercesC.cmake  FindbID.cmake  InSourceBuild.cmake  InstallMacros.cmake  PlatformConfiguration.cmake  UtilityMacros.cmake  Version.cmake
Data/: FindTR.cmake
Data/Config/: Version.trver
Doc/: Old_SVN_Log.txt  osgUse.h
Doc/CMake/: FindTR.cmake
Doc/DoxyFiles/: Doxyfile  custom_Footer.html
Examples/ActorModules/: Application.cpp  Application.h  CMakeLists.txt  Main.cpp  MessageTest.cpp  MessageTest.h  TestActor.cpp  TestActor.h  TestActorModule1.cpp  TestActorModule1.h  TestActorModule2.cpp  TestActorModule2.h  TestDirector.cpp  TestDirector.h  Utils.cpp  Utils.h
Examples/Actors/: Application.cpp  Application.h  CMakeLists.txt  Main.cpp  MessageTest.cpp  MessageTest.h  TestActor1.cpp  TestActor1.h  TestActor2.cpp  TestActor2.h  TestActor3.cpp  TestActor3.h  TestDirector.cpp  TestDirector.h  Utils.cpp  Utils.h
Examples/Director/: Application.cpp  Application.h  CMakeLists.txt  Main.cpp  TestDirector.cpp  TestDirector.h  TestDirector2.cpp  TestDirector2.h  Utils.cpp  Utils.h
Examples/Json/: CMakeLists.txt  Main.cpp  Utils.cpp  Utils.h
Examples/Logging/: CMakeLists.txt  Main.cpp  Utils.cpp  Utils.h
Examples/MPEGCast/: CMakeLists.txt  Main.cpp  RingArray.cpp  RingArray.h  RingArrayCallback.cpp  RingArrayCallback.h  TxtrCameraObject.cpp  TxtrCameraObject.h  Utils.cpp  Utils.h
Examples/MPEGServer/: CMakeLists.txt  Main.cpp  TxtrCameraObject.cpp  TxtrCameraObject.h  Utils.cpp  Utils.h  WinDefaultConfig.cpp
Examples/MPEGSlave/: CMakeLists.txt  Main.cpp  Utils.cpp  Utils.h
Examples/VirtualReality/: CMakeLists.txt  Main.cpp  Utils.cpp  Utils.h  WinDefaultConfig.h
Scripts/: CMakeLists.txt  EnvScript.in  EnvScriptLinux.in
Tests/: .runsettings
TrueReality_exe/: VRSim_Exe.vcproj
VRSim_exe/: VRSim_Exe.vcproj  VersionInf.h  VersionNo.h  resource.h
src/trCore/: ActorGameStaticMesh.cpp  ActorGeneric.cpp  ActorObject.cpp  ActorPagedTerrain.cpp  ActorSkyDome.cpp  CMakeLists.txt  ControllerComponent.cpp  CoreActorsRegistry.cpp  CoreDLLEntryPoint.cpp  CoreEnum.cpp  CoreMsgTypes.cpp  InputComponent.cpp  MessageCameraSynch.cpp  MessageEventTraversal.cpp  MessageFrame.cpp  MessageFrameSynch.cpp  MessagePostEventTraversal.cpp  MessagePostFrame.cpp  MessageSystemControl.cpp  MessageSystemEvent.cpp  MsgChangeFocus.cpp  MsgChangePlayer.cpp  SystemControls.cpp  SystemDirector.cpp  SystemEvents.cpp  WindowCtr.cpp  tcWindowCtr.cpp  trCoreActorsRegistry.cpp  trCoreDLLEntryPoint.cpp  trCoreMsgTypes.cpp  trWindowCtr_OLD.cpp  vrsCoreMsgTypes.cpp  vrsWindowCtr_OLD.cpp
src/trCore/Nodes/: FrameStamp.cpp  Node.cpp  NodeVisitor.cpp
src/trCore/SceneObjects/: RingArray.cpp  RingArrayCallback.cpp  SkyBoxNode.cpp
src/trSG/: CMakeLists.txt  Node.cpp  NodeVisitor.cpp
src/trStart/: CMakeLists.txt  Main.cpp
src/trUtil/: ApplicationUsage.cpp  ArgumentParser.cpp  Bits.cpp  CMakeLists.txt  ConfigParser.cpp  ConfigSchema.cpp  ConfigWriter.cpp  DateTime.cpp  DefaultSettings.cpp  EnumerationNumeric.cpp  EnumerationString.cpp  EnvVariables.cpp  Exception.cpp  ExceptionInvalidParameter.cpp  FileUtils.cpp  FunCall.cpp  FunTraits.cpp  Functor.cpp  GPUDetector.cpp  GPUDetectorWin32.cpp  GPUDetectorX11.cpp  Hash.cpp  HashMap.cpp  JSArray.cpp  Logo.cpp  Math.cpp  PathUtils.cpp  PlatformMacros.cpp  RefStr.cpp  StringUtils.cpp  TextColor.cpp  Timer.cpp  TypeList.cpp  UnaryFunction.cpp  VersionUtil.cpp  WarningUtils.cpp  WindowCtr.cpp  trConfigParser.cpp  trConfigSchema.cpp  trConfigWriter.cpp  (+17 more)
src/trUtil/Console/: ConsoleTextColor.cpp  Logo.cpp  TextColor.cpp
src/trUtil/JSON/: Array.cpp  File.cpp  Object.cpp  Units.cpp  Value.cpp
src/trUtil/JSONx/: Object.cpp  Units.cpp
src/trUtil/Json/: Array.cpp  File.cpp  Object.cpp
src/trUtil/Logging/: Log.cpp  LogFile.cpp  LogLevel.cpp  LogManager.cpp  LogTimeProvider.cpp  LogWriter.cpp  LogWriterConsole.cpp  LogWriterFile.cpp
src/trVersion/: CMakeLists.txt  Main.cpp  Utils.cpp
trCore/: trCore.vcproj
trStart/: VRSim_Exe.vcproj  trStart.vcproj
trUtil/: trUtil.vcproj
vrsCS586_DLL/: VersionInf.h  VersionNo.h  resource.h  vrsCS586_dll.vcproj
vrsCore_DLL/: VersionInf.h  VersionNo.h  resource.h  vrsCore_DLL.vcproj
vrsNetCDFConv_exe/: VersionInf.h  VersionNo.h  vrsNetCDFConvExe.vcproj
vrsPacifPhysics_DLL/: VersionInf.h  VersionNo.bat  VersionNo.h  VersionNo.vbs  vrsPacifPhysics_DLL.aps  vrsPacifPhysics_DLL.rc  vrsPacifPhysics_dll.vcproj
vrsPicatinny_DLL/: VersionInf.h  VersionNo.h  vrsPicatinny_dll.vcproj
vrsTracker_DLL/: VersionInf.h  VersionNo.h  vrsTracker_dll.vcproj
vrsUFVG_DLL/: VersionNo.h  resource.h  vrsUFPG_dll.vcproj
vrsUFVG_DLL/ext/netCDF-401/libsrc4/: Makefile.am  Makefile.in  nc4attr.c  nc4dim.c  nc4file.c  nc4grp.c  nc4hdf.c  nc4internal.c  nc4internal.h  nc4type.c  nc4var.c  ncfunc.c  netcdf_base.h  run_valgrind_tests.sh  tst_atts.c  tst_compounds.c  tst_compounds2.c  tst_converts2.c  tst_dims.c  tst_dims2.c  tst_files.c  tst_files2.c  tst_grps.c  tst_h_atts.c  tst_h_atts2.c  tst_h_compounds.c  tst_h_compounds2.c  tst_h_dimscales.c  tst_h_dimscales2.c  tst_h_enums.c  tst_h_files.c  tst_h_files2.c  tst_h_opaques.c  tst_h_strings.c  tst_h_vars.c  tst_h_vars2.c  tst_interops.c  tst_large.c  tst_lists.c  tst_opaques.c  (+5 more)
vrsUtil_DLL/: VersionInf.h  VersionNo.h  vrsUtil_DLL.aps  vrsUtil_DLL.vcproj
vrsVersionCTR/: ProdVerInf.h  ProdVerNo.h  VersionNo.bat  resource.h  vrsVersionCTR.aps  vrsVersionCTR.rc  vrsVersionCTR.vcproj
vrsWtrNoise_DLL/: VersionInf.h  VersionNo.h  vrsWtrNoise_dll.vcproj
(+560 files in other folders)
